--- a/VocationManager.Web/Views/Projects/Create.cshtml
+++ b/VocationManager.Web/Views/Projects/Create.cshtml
@@ -3,11 +3,14 @@
 
 @{
     ViewData["Title"] = "Create";
+
+    var statuses = ((IEnumerable<KeyValuePair<string, string>>)this.ViewBag.AvailableStatuses).Select(x => new SelectListItem(x.Value, x.Key.ToString()));
+    var priorities = ((IEnumerable<KeyValuePair<string, string>>)this.ViewBag.AvailablePriorities).Select(x => new SelectListItem(x.Value, x.Key.ToString()));
 }
 
 <div class="card light-shadow m-0 m-auto col-5">
     <div class="img-fluid text-center mt-2">
-        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://images.unsplash.com/photo-1493612276216-ee3925520721?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="Role image">
+        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://images.unsplash.com/photo-1550418290-a8d86ad674a6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="create image">
     </div>
     <div class="card-body">
         <h5 class="card-title">Create new role</h5>
@@ -27,9 +30,17 @@
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Status" class="control-label"></label>
-                    <input asp-for="Status" class="form-control" />
-                    <span asp-validation-for="Status" class="text-danger"></span>
+                    <label asp-for="Status" class="control-label">Status</label>
+                    <select asp-for="Status" class="form-control form-control-lg" asp-items="@statuses">
+                        <option value="" selected="">Select status...</option>
+                    </select>
+                </div>
+                
+                <div class="form-group">
+                    <label asp-for="Priority" class="control-label">Priority</label>
+                    <select asp-for="Priority" class="form-control form-control-lg" asp-items="@priorities">
+                        <option value="" selected="">Select priority...</option>
+                    </select>
                 </div>
 
                 <br />
