--- a/VocationManager.Web/Views/Projects/Delete.cshtml
+++ b/VocationManager.Web/Views/Projects/Delete.cshtml
@@ -7,10 +7,10 @@
 
 <div class="card light-shadow m-0 m-auto col-5">
     <div class="img-fluid text-center mt-1">
-        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://cdn4.iconfinder.com/data/icons/bookmarks-and-tags/128/Bookmark__Tags_Delete_tag-512.png" alt="delete image">
+        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://images.unsplash.com/photo-1593510987046-1f8fcfc512a0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="delete image">
     </div>
     <div class="card-body">
-        <h5 class="card-title">Are you sure you want to delete this role?</h5>
+        <h5 class="card-title">Are you sure you want to delete this project?</h5>
         <div>
             <dl class="row">
                 <dt class = "col-sm-3">
@@ -32,6 +32,13 @@
                 </dt>
                 <dd class = "col-sm-9">
                     @Html.DisplayFor(model => model.Status)
+                </dd>
+                
+                <dt class = "col-sm-3">
+                    @Html.DisplayNameFor(model => model.Priority)
+                </dt>
+                <dd class = "col-sm-9">
+                    @Html.DisplayFor(model => model.Priority)
                 </dd>
             </dl>
     
