--- a/VocationManager.Web/Views/Projects/Edit.cshtml
+++ b/VocationManager.Web/Views/Projects/Edit.cshtml
@@ -3,14 +3,22 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var statuses = ((IEnumerable<KeyValuePair<string, string>>)this.ViewBag.AvailableStatuses)
+        .Where(s=>s.Key != Model.Status.ToString())
+        .Select(x => new SelectListItem(x.Value, x.Key.ToString()));
+
+    var priorities = ((IEnumerable<KeyValuePair<string, string>>)this.ViewBag.AvailablePriorities)
+        .Where(s=>s.Key != Model.Priority.ToString())
+        .Select(x => new SelectListItem(x.Value, x.Key.ToString()));
+
 }
 
 <div class="card light-shadow m-0 m-auto col-5">
     <div class="img-fluid text-center mt-2">
-        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://cdn2.iconfinder.com/data/icons/bookmark-1/24/tag-edit-512.png" alt="edit image">
+        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://images.unsplash.com/photo-1586281380117-5a60ae2050cc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="edit image">
     </div>
     <div class="card-body">
-        <h5 class="card-title">Edit existing role</h5>
+        <h5 class="card-title">Edit existing project</h5>
         <div>
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -29,9 +37,17 @@
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Status" class="control-label"></label>
-                    <input asp-for="Status" class="form-control" />
-                    <span asp-validation-for="Status" class="text-danger"></span>
+                    <label asp-for="Status" class="control-label">Status</label>
+                    <select asp-for="Status" class="form-control form-control-lg" asp-items="@statuses">
+                        <option value="@Model.Status" selected="">@Model.Status.ToString()</option>
+                    </select>
+                </div>    
+                
+                <div class="form-group">
+                    <label asp-for="Priority" class="control-label">Priority</label>
+                    <select asp-for="Priority" class="form-control form-control-lg" asp-items="@priorities">
+                        <option value="@Model.Priority" selected="">@Model.Priority.ToString()</option>
+                    </select>
                 </div>
                 
                 <div class="form-group">
