Подобрение на филтрация на проекти и роли

--- a/VocationManager.Web/Views/Projects/Details.cshtml
+++ b/VocationManager.Web/Views/Projects/Details.cshtml
@@ -60,6 +60,15 @@
                     <i class="fas fa-edit"></i> Edit
                 </button>
             </a>
+
+            if (User.IsInRole(Enum.GetName(DefaultRoles.CEO)))
+            {
+                <a asp-action="Delete" asp-route-id="@Model.Id">
+                    <button class="btn btn-danger">
+                        <i class="fas fa-trash-alt"></i> Delete
+                    </button>
+                </a>
+            }
         }
     </div>
 </div>
