--- a/VocationManager.Web/Views/Users/Index.cshtml
+++ b/VocationManager.Web/Views/Users/Index.cshtml
@@ -27,7 +27,7 @@
             <div class="card light-shadow m-2" style="flex-basis: 26%">
                 <div class="card-body">
                     <h5 class="card-title">@($"{user.FirstName} {user.LastName}")</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">@($"{($"{user.RoleName} @ Team_NAME")}")</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">@($"{($"{user.RoleName} @ {(user.TeamId.HasValue ? user.Team.Name : "(no team)")}")}")</h6>
                     <p class="card-text">@user.Username</p>
                     
                     <hr/>
